yaml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: healthcheck-service
spec:
  selector:
    env: otus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
