yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthcheck-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health$1$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/litunovsky/health
        pathType: Prefix
        backend:
          service:
            name: healthcheck-service
            port:
              number: 80
